--- a/notebooks/dataset_loading/do1.ipynb
+++ b/notebooks/dataset_loading/do1.ipynb
@@ -10,8 +10,26 @@
     "from pathlib import Path\n",
     "\n",
     "import syft_rds as sy\n",
+    "from syft_core import Client\n",
+    "from syft_rds.server.app import create_app\n",
     "\n",
     "import syft_flwr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf .server .ipynb_checkpoints/"
    ]
   },
   {
@@ -30,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXAMPLE = \"embedded-devices\"\n",
-    "# EXAMPLE = \"quickstart-pytorch\"\n",
+    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "# EXAMPLE = \"embedded-devices\"\n",
     "\n",
     "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
     "DATASET_DIR = Path(\"./datasets/\").expanduser().absolute()\n",
@@ -39,61 +57,25 @@
     "SIM_DIR = PROJECT_DIR / \".sim\"\n",
     "CONFIG_DIR = SIM_DIR / \".config\"\n",
     "\n",
-    "print(f\"{PROJECT_DIR = }\")\n",
-    "print(f\"{DATASET_DIR = }\")\n",
-    "print(f\"{FLWR_PROJECT_PATH = }\")\n",
-    "print(f\"{SIM_DIR = }\")\n",
-    "print(f\"{CONFIG_DIR = }\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create a local dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "if EXAMPLE == \"embedded-devices\":\n",
     "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
     "\n",
     "elif EXAMPLE == \"quickstart-pytorch\":\n",
     "    SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "\n",
-    "syft_flwr.utils.save_dataset_to_disk(\n",
-    "    dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## DO loads dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "DO = \"yash@openmined.org\"\n",
     "DATASET_NAME = f\"{SYFTBOX_DATASET_NAME}_part_1\"\n",
     "\n",
-    "!just dump-sim-config {DO}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Print out the config"
+    "print(f\"{PROJECT_DIR = }\")\n",
+    "print(f\"{DATASET_DIR = }\")\n",
+    "print(f\"{FLWR_PROJECT_PATH = }\")\n",
+    "print(f\"{SIM_DIR = }\")\n",
+    "print(f\"{CONFIG_DIR = }\")\n",
+    "\n",
+    "!just dump-sim-config {DO}\n",
+    "\n",
+    "DO_CONFIG = CONFIG_DIR / f\"{DO}.json\"\n",
+    "!cat $DO_CONFIG"
    ]
   },
   {
@@ -102,8 +84,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DO_CONFIG = CONFIG_DIR / f\"{DO}.json\"\n",
-    "!cat $DO_CONFIG"
+    "do_syftbox_client = Client.load(DO_CONFIG)\n",
+    "event_server = create_app(client=do_syftbox_client)\n",
+    "event_server.start()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DO creates a local dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "syft_flwr.utils.save_dataset_to_disk(\n",
+    "    dataset_name=SYFTBOX_DATASET_NAME, dataset_dir=DATASET_DIR, num_partitions=2\n",
+    ")"
    ]
   },
   {
@@ -147,7 +148,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(do.datasets)"
+    "print(do.datasets)\n",
+    "assert len(do.datasets) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now DO waits for DS to submit job"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DO Review Jobs\n",
+    "\n",
+    "After the DS submits jobs"
    ]
   },
   {
@@ -156,8 +174,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flwr_project_path = str(FLWR_PROJECT_PATH)\n",
-    "mock_path = str(do.dataset.get(name=SYFTBOX_DATASET_NAME).get_mock_path())"
+    "jobs = do.jobs.get_all(status=\"pending_code_review\")\n",
+    "assert len(jobs) == 1\n",
+    "\n",
+    "job = jobs[-1]\n",
+    "\n",
+    "# same as job.code.describe()\n",
+    "job.show_user_code()\n",
+    "\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(DO_CONFIG)\n",
+    "res_job = do.run_private(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do.jobs.share_results(res_job)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_server.stop()"
    ]
   },
   {
@@ -174,13 +235,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (FLWR_PROJECT_PATH / \"main.py\").exists():\n",
-    "    !just run-sim-client {flwr_project_path} {DO} {mock_path}\n",
-    "else:\n",
-    "    print(\"main.py does not exist in the project\")\n",
-    "    print(\n",
-    "        \"Please wait for the DS to bootstrap the project and then come back to run this cell\"\n",
-    "    )"
+    "# flwr_project_path = str(FLWR_PROJECT_PATH)\n",
+    "# mock_path = str(do.dataset.get(name=SYFTBOX_DATASET_NAME).get_mock_path())\n",
+    "\n",
+    "# if (FLWR_PROJECT_PATH / \"main.py\").exists():\n",
+    "#     !just run-sim-client {flwr_project_path} {DO} {mock_path}\n",
+    "# else:\n",
+    "#     print(\"main.py does not exist in the project\")\n",
+    "#     print(\n",
+    "#         \"Please wait for the DS to bootstrap the project and then come back to run this cell\"\n",
+    "#     )"
    ]
   },
   {
@@ -193,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,5 +275,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
