--- a/notebooks/dataset_loading/do2.ipynb
+++ b/notebooks/dataset_loading/do2.ipynb
@@ -9,14 +9,16 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "import syft_rds as sy"
+    "import syft_rds as sy\n",
+    "from syft_core import Client\n",
+    "from syft_rds.server.app import create_app"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DO loads dataset"
+    "## Set up "
    ]
   },
   {
@@ -25,13 +27,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXAMPLE = \"embedded-devices\"\n",
-    "# EXAMPLE = \"quickstart-pytorch\"\n",
+    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "# EXAMPLE = \"embedded-devices\"\n",
+    "\n",
     "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
     "DATASET_DIR = Path(\"./datasets/\").expanduser().absolute()\n",
     "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
     "SIM_DIR = PROJECT_DIR / \".sim\"\n",
     "CONFIG_DIR = SIM_DIR / \".config\"\n",
+    "\n",
+    "if EXAMPLE == \"embedded-devices\":\n",
+    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
+    "elif EXAMPLE == \"quickstart-pytorch\":\n",
+    "    SYFTBOX_DATASET_NAME = \"cifar10\"\n",
     "\n",
     "print(f\"{PROJECT_DIR = }\")\n",
     "print(f\"{DATASET_DIR = }\")\n",
@@ -39,22 +47,13 @@
     "print(f\"{SIM_DIR = }\")\n",
     "print(f\"{CONFIG_DIR = }\")\n",
     "\n",
-    "if EXAMPLE == \"embedded-devices\":\n",
-    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
-    "elif EXAMPLE == \"quickstart-pytorch\":\n",
-    "    SYFTBOX_DATASET_NAME = \"cifar10\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "DO = \"rasswanth@openmined.org\"\n",
     "DATASET_NAME = f\"{SYFTBOX_DATASET_NAME}_part_2\"\n",
     "\n",
-    "!just dump-sim-config {DO}"
+    "!just dump-sim-config {DO}\n",
+    "\n",
+    "DO_CONFIG = CONFIG_DIR / f\"{DO}.json\"\n",
+    "!cat $DO_CONFIG"
    ]
   },
   {
@@ -63,8 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DO_CONFIG = CONFIG_DIR / f\"{DO}.json\"\n",
-    "!cat $DO_CONFIG"
+    "do_syftbox_client = Client.load(DO_CONFIG)\n",
+    "event_server = create_app(client=do_syftbox_client)\n",
+    "event_server.start()"
    ]
   },
   {
@@ -108,7 +108,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(do.datasets)"
+    "print(do.datasets)\n",
+    "assert len(do.datasets) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now DO waits for DS to submit job"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DO Review Jobs"
    ]
   },
   {
@@ -117,8 +132,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flwr_project_path = str(FLWR_PROJECT_PATH)\n",
-    "mock_path = str(do.dataset.get(name=SYFTBOX_DATASET_NAME).get_mock_path())"
+    "jobs = do.jobs.get_all(status=\"pending_code_review\")\n",
+    "assert len(jobs) == 1\n",
+    "\n",
+    "job = jobs[-1]\n",
+    "\n",
+    "# same as job.code.describe()\n",
+    "job.show_user_code()\n",
+    "\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(DO_CONFIG)\n",
+    "res_job = do.run_private(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do.jobs.share_results(res_job);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event_server.stop()"
    ]
   },
   {
@@ -135,6 +197,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "flwr_project_path = str(FLWR_PROJECT_PATH)\n",
+    "mock_path = str(do.dataset.get(name=SYFTBOX_DATASET_NAME).get_mock_path())\n",
+    "\n",
     "if (FLWR_PROJECT_PATH / \"main.py\").exists():\n",
     "    !just run-sim-client {flwr_project_path} {DO} {mock_path}\n",
     "else:\n",
@@ -154,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -172,5 +237,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
