--- a/notebooks/dataset_loading/ds.ipynb
+++ b/notebooks/dataset_loading/ds.ipynb
@@ -15,18 +15,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "EXAMPLE = \"embedded-devices\"\n",
-    "# EXAMPLE = \"quickstart-pytorch\"\n",
-    "\n",
-    "if EXAMPLE == \"embedded-devices\":\n",
-    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
-    "elif EXAMPLE == \"quickstart-pytorch\":\n",
-    "    SYFTBOX_DATASET_NAME = \"cifar10\""
+    "## Set up"
    ]
   },
   {
@@ -35,7 +27,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "EXAMPLE = \"quickstart-pytorch\"\n",
+    "# EXAMPLE = \"embedded-devices\"\n",
+    "\n",
+    "if EXAMPLE == \"embedded-devices\":\n",
+    "    SYFTBOX_DATASET_NAME = \"fashionmnist\"\n",
+    "elif EXAMPLE == \"quickstart-pytorch\":\n",
+    "    SYFTBOX_DATASET_NAME = \"cifar10\"\n",
+    "\n",
+    "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
+    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
+    "SIM_DIR = PROJECT_DIR / \".sim\"\n",
+    "CONFIG_DIR = SIM_DIR / \".config\"\n",
+    "\n",
+    "DO1 = \"yash@openmined.org\"\n",
+    "DO2 = \"rasswanth@openmined.org\"\n",
     "DS = \"khoa@openmined.org\"\n",
+    "\n",
+    "DS_CONFIG = f\"{CONFIG_DIR}/{DS}.json\"\n",
     "\n",
     "!just dump-sim-config {DS}"
    ]
@@ -46,14 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_DIR = Path(os.getcwd()).parent.parent.absolute()\n",
-    "FLWR_PROJECT_PATH = PROJECT_DIR / \"examples\" / EXAMPLE\n",
-    "SIM_DIR = PROJECT_DIR / \".sim\"\n",
-    "CONFIG_DIR = SIM_DIR / \".config\"\n",
-    "\n",
-    "DO1 = \"yash@openmined.org\"\n",
-    "DO2 = \"rasswanth@openmined.org\"\n",
-    "DS_CONFIG = f\"{CONFIG_DIR}/{DS}.json\""
+    "# do_syftbox_client = Client.load(DS_CONFIG)\n",
+    "# event_server = create_app(client=do_syftbox_client)\n",
+    "# event_server.start()"
    ]
   },
   {
@@ -70,7 +74,9 @@
     "do_client_2 = sy.init_session(host=DO2, syftbox_client_config_path=DS_CONFIG)\n",
     "assert do_client_2.host == DO2\n",
     "assert do_client_2.email == DS\n",
-    "assert not do_client_2.is_admin"
+    "assert not do_client_2.is_admin\n",
+    "\n",
+    "datasites = [do_client_1, do_client_2]"
    ]
   },
   {
@@ -79,8 +85,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasites = [do_client_1, do_client_2]\n",
-    "\n",
     "dataset1 = do_client_1.dataset.get(name=SYFTBOX_DATASET_NAME)\n",
     "dataset1.describe()"
    ]
@@ -96,13 +100,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bootstrap the `flwr` project and run the server side"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -112,7 +109,7 @@
     "    syft_flwr.bootstrap(FLWR_PROJECT_PATH, aggregator=DS, datasites=[DO1, DO2])\n",
     "    print(\"Project bootstrapped successfully\")\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    print(f\"Boostrap failed with err: {e}\")"
    ]
   },
   {
@@ -121,7 +118,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!just run-sim-server {str(FLWR_PROJECT_PATH)} {DS}"
+    "# Job submission\n",
+    "! rm -rf {FLWR_PROJECT_PATH / \".venv\"} {FLWR_PROJECT_PATH / \"pytorch\" / \"__pycache__\"} {FLWR_PROJECT_PATH / \"pytorch\" / \"weights\"} \n",
+    "\n",
+    "for client in datasites:\n",
+    "    job = client.jobs.submit(\n",
+    "        name=\"Syft Flower Experiment\",\n",
+    "        description=\"Syft Flower Federated Learning Experiment\",\n",
+    "        user_code_path=FLWR_PROJECT_PATH,\n",
+    "        dataset_name=SYFTBOX_DATASET_NAME,\n",
+    "        # runtime=\"./dockerfile\", # path to a local dockerfile\n",
+    "        tags=[\"federated\", \"learning\", \"syft\", \"flwr\"],\n",
+    "        entrypoint=\"main.py\",\n",
+    "    )\n",
+    "    print(job)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run the server side code (Self Submit - TODO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ds_client = sy.init_session(host=DS, syftbox_client_config_path=DS_CONFIG)\n",
+    "\n",
+    "# self_job = ds_client.jobs.submit(\n",
+    "#         name=\"Syft Flower Experiment\",\n",
+    "#         description=\"Syft Flower Federated Learning Experiment\",\n",
+    "#         user_code_path=FLWR_PROJECT_PATH,\n",
+    "#         dataset_name=SYFTBOX_DATASET_NAME,\n",
+    "#         # runtime=\"./dockerfile\", # path to a local dockerfile\n",
+    "#         tags=[\"federated\", \"learning\", \"syft\", \"flwr\"],\n",
+    "#         entrypoint=\"main.py\"\n",
+    "# )\n",
+    "# self_job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ds_client.run_private(self_job)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run simulation using the `main.py` file directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(DS_CONFIG)\n",
+    "!uv run {str(FLWR_PROJECT_PATH / \"main.py\")} --active"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# syft_flwr.view_server_logs(name=FLWR_PROJECT_PATH.name)"
    ]
   },
   {
@@ -137,21 +209,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "syft_flwr.run_simulation(\n",
-    "    path=FLWR_PROJECT_PATH,\n",
-    "    mock_paths=[\n",
-    "        do_client.datasets.get(name=SYFTBOX_DATASET_NAME).mock_path\n",
-    "        for do_client in datasites\n",
-    "    ],\n",
-    "    num_datasites=len(datasites),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO - Submit Jobs"
+    "# syft_flwr.run_simulation(\n",
+    "#     path=FLWR_PROJECT_PATH,\n",
+    "#     mock_paths=[\n",
+    "#         do_client.datasets.get(name=SYFTBOX_DATASET_NAME).mock_path\n",
+    "#         for do_client in datasites\n",
+    "#     ],\n",
+    "#     num_datasites=len(datasites),\n",
+    "# )"
    ]
   },
   {
@@ -159,24 +224,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Job submission\n",
-    "for client in datasites:\n",
-    "    client.jobs.submit(\n",
-    "        name=\"MedMNIST FL Experiment\",\n",
-    "        description=\"MedMNIST Federated Learning Experiment\",\n",
-    "        user_code_path=FLWR_PROJECT_PATH,\n",
-    "        # runtime=\"./dockerfile\", # path to a local dockerfile\n",
-    "        tags=[\"federated\", \"learning\", \"medical\", \"mnist\"],\n",
-    "    )\n",
-    "\n",
-    "syft_flwr.view_server_logs(name=FLWR_PROJECT_PATH.name)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -194,5 +247,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
